# honeybeePF

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  README.md  publish.sh  values.yaml
.github/workflows/: build.yml  cicd.yml  docker-publish.yml  lint.yml
charts/: README.md
charts/honeybeepf/: Chart.yaml  values.yaml
charts/honeybeepf-otel-collector/: Chart.yaml  values.yaml
charts/honeybeepf-prometheus/: Chart.yaml  values.yaml
charts/honeybeepf/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  daemonset.yaml  service.yaml  servicemonitor.yaml
honeybeepf/: .gitignore  Cargo.toml  Makefile  README.md  example.env
honeybeepf/docs/: ADDING_NEW_PROBE.md  BINARY_DEPLOYMENT.md
honeybeepf/honeybeepf/: Cargo.toml  build.rs
honeybeepf/honeybeepf-common/: Cargo.toml
honeybeepf/honeybeepf-common/src/: lib.rs
honeybeepf/honeybeepf-ebpf/: Cargo.toml
honeybeepf/honeybeepf-ebpf/src/: lib.rs  main.rs
honeybeepf/honeybeepf-ebpf/src/probes/: mod.rs
honeybeepf/honeybeepf-ebpf/src/probes/builtin/: block_io.rs  exec_watch.rs  file_access.rs  gpu_open.rs  gpu_usage.rs  gpu_utils.rs  mod.rs  network.rs  syscall_types.rs  vfs_latency.rs
honeybeepf/honeybeepf-ebpf/src/probes/builtin/gpu/: mod.rs  nccl.rs  usage.rs  utils.rs
honeybeepf/honeybeepf-ebpf/src/probes/builtin/gpu/local_test/: HOWTESTED.md  Makefile  fake_nccl.c  get_version.yaml  nccl_version.yaml  test_nccl_uprobe.c
honeybeepf/honeybeepf-ebpf/src/probes/builtin/llm/: helpers.rs  maps.rs  mod.rs
honeybeepf/honeybeepf/src/: k8s.rs  lib.rs  main.rs  settings.rs  telemetry.rs
honeybeepf/honeybeepf/src/observability/: metrics.rs  mod.rs  otlp.rs
honeybeepf/honeybeepf/src/probes/: discovery.rs  mod.rs
honeybeepf/honeybeepf/src/probes/builtin/: block_io.rs  gpu_open.rs  gpu_usage.rs  mod.rs  network.rs
honeybeepf/honeybeepf/src/probes/builtin/filesystem/: file_access.rs  mod.rs  vfs_latency.rs
honeybeepf/honeybeepf/src/probes/builtin/gpu/: mod.rs  nccl.rs  usage.rs
honeybeepf/honeybeepf/src/probes/builtin/llm/: discovery.rs  mod.rs  processor.rs  types.rs
honeybeepf/honeybeepf/src/probes/builtin/llm/discovery/: binary.rs  dynamic.rs  mod.rs
honeybeepf/honeybeepf/src/probes/builtin/llm/http/: mod.rs  protocol.rs  utils.rs
honeybeepf/honeybeepf/src/probes/builtin/llm/http/providers/: README.md  config.rs  mod.rs  request.rs  usage.rs
honeybeepf/honeybeepf/src/probes/builtin/network/: dns.rs  mod.rs  tcp_connect.rs  tcp_retrans.rs
honeybeepf/honeybeepf/src/probes/builtin/scheduler/: mod.rs  offcpu.rs  runqueue.rs
honeybeepf/xtask/: Cargo.toml
honeybeepf/xtask/src/: main.rs
infra/: .gitignore  Makefile  README.md  bastion_service.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra_module/: README.md  bastion-tunnel.sh
infra_module/envs/jun/: variables.tf
infra_module/modules/network/: main.tf  variables.tf
infra_module/stack/: main.tf  outputs.tf
