[workspace]
resolver = "2"
members = [
    "honeybeepf",
    "honeybeepf-common",
    "honeybeepf-ebpf",
]
default-members = ["honeybeepf", "honeybeepf-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = "0.13"          
aya-ebpf = "0.1.0"      
aya-log = "0.2"      
aya-log-ebpf = "0.1.0"  
aya-build = "0.1"
aya-log-common = "0.1.14"

# Required for tower/indexmap compatibility
indexmap = "=1.9.3"
tower = "0.4.14"

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
clap = { version = "4.5.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

# Observability - Corrected feature names for v0.15.0
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }

# OTel settings we fixed earlier
opentelemetry = { version = "0.21.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.15.0", features = ["grpc-tonic", "tokio"] }
tracing-opentelemetry = { version = "0.22.0" }

[profile.release.package.honeybeepf-ebpf]
debug = 2
codegen-units = 1

[patch.crates-io]
indexmap = { git = "https://github.com/bluss/indexmap", tag = "1.9.3" }
