[package]
name = "honeybeepf-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
honeybeepf-common = { path = "../honeybeepf-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "honeybeepf"
path = "src/main.rs"
