[package]
name = "honeybeepf"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
honeybeepf-common = { path = "../honeybeepf-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
chrono = "0.4"
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "sync",
    "time",
] }
clap = { workspace = true, features = ["derive", "env"] }
config = "0.14"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
bytes = "1"
httparse = "1.9"
once_cell = "1.19"
flate2 = "1.0"
procfs = "0.18"
regex = "1"
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serial_test = "3.2.0"

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
honeybeepf-ebpf = { path = "../honeybeepf-ebpf" }

[[bin]]
name = "honeybeepf"
path = "src/main.rs"
